gtest = dependency('gtest', main: true)
test(
    'Message',
    executable(
        'Message_test',
        sources: ['Message_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'ThreadSort',
    executable(
        'ThreadSort_test',
        sources: ['ThreadSortTest.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'Trait',
    executable(
        'Trait_test',
        sources: ['TraitTest.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'Turn90',
    executable(
        'Turn90_test',
        sources: ['Turn90_Test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)
